[package]
name = "main"
version = "0.0.0"

[lib]
path = "main/main.rs"
crate-type = ["staticlib"]

[profile.release]
#incremental = true
debug = true

[features]
acpica = [ "kernel/acpica" ]

[dependencies]
kernel = { path = "Core" }
syscalls = { path = "Modules/syscalls" }
network = { path = "Modules/network" }
usb-core = { path = "Modules/usb_core" }

fs_fat = { path = "Modules/fs_fat" }
fs_iso9660 = { path = "Modules/fs_iso9660" }
fs_ext_n = { path = "Modules/fs_extN" }

virtio = { path = "Modules/virtio" }
storage-ata = { path = "Modules/storage_ata" }
storage-ahci = { path = "Modules/storage_ahci" }
input_ps2 = { path = "Modules/input_ps2" }
nic-rtl8139 = { path = "Modules/nic_rtl8139" }

usb-ohci = { path = "Modules/usb_ohci" }
usb-hid = { path = "Modules/usb_hid" }
usb-msc = { path = "Modules/usb_msc" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
#video-vga = { path = "Modules/video_vga" }

[build_dependencies]
my_dependencies = { git = "https://github.com/thepowersgang/my-dependencies-rs.git" }

# Workspace members for the tests (so they work within VSCode)
[workspace]
members = [
    "tests/network",
    "tests/filesystem",
]