[package]
name = "native_kernel"
version = "0.0.0"
edition = "2018"

[dependencies]
kernel = { path = "../Kernel/Core", features = ["test"] }
syscalls = { path = "../Kernel/Modules/syscalls", features = ["native"] }
vfs = { path = "../Kernel/Modules/vfs", features = [] }
gui = { path = "../Kernel/Modules/gui", features = [] }
network = { path = "../Kernel/Modules/network", features = [] }

lwip = { path = "../Kernel/tests/network/lwip", optional = true, features = [] }

process-memory = "0.4"
minifb = "0.28"

[features]
network = ["lwip"]