[package]
name = "bootloader-uefi"
version = "0.0.0"

[profile.release]
panic = "abort"

[dependencies]
uefi = {path = "../libuefi"}
uefi_proto = {path = "../uefi_proto"}
utf16_literal = { path = "../../externals/crates.io/utf16_literal" }

[lib]
crate-type = ["staticlib"]
name = "bootloader_uefi"
path = "main.rs"
