[package]
name = "wtk"
version = "0.0.1"
edition = "2015"

[lib]
path = "lib.rs"

[dependencies]
macros = { path = "../libmacros" }
async = { path = "../libasync" }
byteorder = { path = "../libbyteorder" }

std = { path = "../libstd" }
syscalls = { path = "../libsyscalls" }

embedded-images = { path = "../../Graphics/embedded" }
