[package]
name = "loader"
version = "0.0.1"

[[bin]]
name = "loader"
path = "src/main.rs"

[lib]
path = "lib.rs"

[dependencies]
std = { path = "../libstd" }
std_rt = { path = "../libstd_rt" }
syscalls = { path = "../libsyscalls" }
byteorder = { path = "../libbyteorder" }
cmdline_words_parser = { path = "../../externals/crates.io/cmdline_words_parser" }
