[package]
name = "simple_console"
version = "0.0.1"
edition = "2015"

[dependencies]
wtk = { path = "../libwtk" }
async = { path = "../libasync" }
cmdline_words_parser = { path = "../../externals/crates.io/cmdline_words_parser", default-features = false, features = ["alloc"] }

std = { path = "../libstd" }
syscalls = { path = "../libsyscalls" }
wtk_ele_console = { path = "../libwtk_ele_console" }

