[package]
name = "usb-core"
version = "0.0.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
kernel = { path = "../../Core" }
utf16 = { path = "../utf16" }
stack_dst = { path = "../../../externals/crates.io/stack_dst", default-features = false }

core = { package = "core-futures-tls", version = "0.1.0" }

