[package]
name = "kernel-test-network"
version = "0.1.0"
authors = ["John Hodge <tpg@mutabah.net>"]
edition = "2018"

[features]
#default = ["lwip"]

[lib]
doctest = false

[dependencies]
network = { path = "../../Modules/network" }
kernel = { path = "../../Core", features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
cmdline_words_parser = { path = "../../../externals/crates.io/cmdline_words_parser", default-features = false }
lazy_static = "1.4"
lwip = { path = "lwip", optional = true }