[package]
name = "loader_dyn"
version = "0.0.0"
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
syscalls = { path = "../../libsyscalls", features=["native_nolink"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features=["winnt", "memoryapi", "errhandlingapi", "sysinfoapi"] }
